charts/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fistbump-service
spec:
  selector:
    app: fistbump # Assuming your pods have this label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
