charts/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fistbump-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
  - host: www.fistbump.chat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fistbump-service
            port:
              number: 80
  - host: fistbump.chat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fistbump-service
            port:
              number: 80
  tls:
  - hosts:
    - fistbump.chat
    - www.fistbump.chat
    secretName: fistbump-chat-tls
